Fixed some broken css in inquiry and phase views and in hypothesis view/teaser

--- a/modules/custom/pi/core/pi/pi_phase.css
+++ b/modules/custom/pi/core/pi/pi_phase.css
@@ -35,7 +35,7 @@ div.titlebox {
 	background-color: #dee7ea;
 	font-weight: bold;
 	font-size: 1.1em;
-	generic-family: san-serif;
+	font-family: sans-serif;
 	color: #ffffff;
 	overflow: auto;
 }
@@ -48,7 +48,7 @@ div.titleboxnoicon {
 	background-color: #dee7ea;
 	font-weight: bold;
 	font-size: 1.1em;
-	generic-family: san-serif;
+	font-family: san-serif;
 	color: #ffffff;
 	overflow: auto;
 }
@@ -61,7 +61,6 @@ div.titleboxnoact {
 	background-color: #dee7ea;
 	font-weight: bold;
 	font-size: 1.1em;
-	generic-family: san-serif;
 	color: #ffffff;
 	overflow: auto;
 }
@@ -74,7 +73,6 @@ div.titleboxnoiconnoact {
 	background-color: #dee7ea;
 	font-weight: bold;
 	font-size: 1.1em;
-	generic-family: san-serif;
 	color: #ffffff;
 	overflow: auto;
 }
@@ -85,8 +83,7 @@ div.activitybox {
 	height: 19px;
 	width: 50%;
 	background-color: #edf2f4;
-	font-size: 1em;
-	generic-family: san-serif;
+	font-size: 1em;	
 	color: #777777;
 }
 
@@ -95,8 +92,7 @@ div.newactbox {
 	height: 19px;
 	width: 50%;
 	background-color: #edf2f4;
-	font-size: 1em;
-	generic-family: san-serif;
+	font-size: 1em;	
 	font-weight: bold;
 	color: #777777;
 }
@@ -106,8 +102,7 @@ div.iconbox {
 	height: 20px;
 	width: 30px;
 	background-color: #edf2f4;
-	font-size: 1em;
-	generic-family: san-serif;
+	font-size: 1em;	
 	font-weight: bold;
 	color: #777777;
 }
