--- a/modules/custom/pi/core/pi_authoring/pi_authoring.css
+++ b/modules/custom/pi/core/pi_authoring/pi_authoring.css
@@ -26,11 +26,11 @@
 }
 
 #pi_authoring .inquiry_description {
-	font-decoration: italic;
+	font-style: italic;
 	font-size: 11px;
 }
 
 #pi_authoring .help {
-	font-decoration: italic;
+	font-style: italic;
 	font-size: 11px;
 }
